--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@ h2{
 
 #dinnerList {
     display: none;
-    width: 20%;
-    padding: 5px 0;
-    text-align: center;
+    width: 80%;
+    padding-left: 15px;
+    text-align: left;
     background-color: white;
     margin-top: 20px;
     border: 2px double black;
