--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body{
 }
 
 h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 70px;
     color: rgb(69, 48, 22);
     text-shadow: -1px 1px 0 #000,
@@ -23,6 +26,9 @@ h1{
 }
 
 h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 30px;
     font-style: italic;
     color: rgb(238, 216, 167);
