--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
-body{
+html{
     height: 100%;
     width: 100%;
     background-image: url('images/food2.jpg');
-    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+input{
+    background-color:  rgb(255, 247, 210);
 }
 
 h1{
@@ -59,25 +67,39 @@ h2{
     align-items: center;
 }
 
-#dinnerList {
+#dinnerList{
     display: none;
     width: 90%;
     padding-left: 15px;
     text-align: left;
-    background-color: white;
+    background-color: rgb(255, 247, 210);
     margin-top: 20px;
     border: 2px double black;
 }
 
-li:hover{
+#dinnerList li:hover{
     font-weight: bold;
 }
 
+#OutputGroceryList{
+    display: none;
+    width: 90%;
+    padding-left: 15px;
+    text-align: left;
+    background-color: rgb(255, 247, 210);
+    margin-top: 20px;
+    border: 2px double black;
+}
+
+h3{
+    display: flex;
+    justify-content: center;
+}
 
 #outputTip{
 width: 150px;
 height: 40px;
-background-color: white;
+background-color: rgb(255, 247, 210);
 border: double 2px black;
 margin-bottom: 3%;
 margin-top: 3%;
@@ -86,4 +108,40 @@ justify-content: center;
 align-items: center;
 font-size: larger;
 font-weight: 900;
+}
+
+
+button {
+  background-color: #422800;
+  border: 2px solid rgb(255, 247, 210);
+  border-radius: 30px;
+  box-shadow: rgb(255, 247, 210) 4px 4px 0 0;
+  color:rgb(255, 247, 210);
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 300;
+  font-size: 10px;
+  padding: 0 6px;
+  line-height: 25px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:hover {
+  background-color: rgb(19, 13, 9);
+}
+
+button:active {
+  box-shadow: rgb(255, 247, 210) 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  button {
+    min-width: 120px;
+    padding: 0 25px;
+  }
 }
